Merge with next