@@ -10,7 +10,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 /**
@@ -30,7 +33,7 @@ public class TaxonomyService {
 
     public Taxonomies getTaxonomies(String code, String ec, String macroArea, Boolean onlyValid) {
         List<Taxonomy> taxonomies = taxonomyRepository.searchTaxonomies(
-                ec, macroArea, code != null ? ".*".concat(code).concat(".*") : null, onlyValid, Instant.now())
+                ec, macroArea, code != null ? "^[0-9]/.*".concat(code).concat(".*/$") : null, onlyValid, Instant.now())
                 .stream()
                 .map(elem -> modelMapper.map(elem, Taxonomy.class))
                 .toList();
@@ -40,8 +43,22 @@ public class TaxonomyService {
     }
 
     public List<Taxonomy> getTaxonomiesByCodes(List<String> codes) {
-        return taxonomyRepository.findBySpecificBuiltInDataIn(codes).stream()
-                .map(elem -> modelMapper.map(elem, Taxonomy.class)).collect(Collectors.toList());
+        return taxonomyRepository.findBySpecificBuiltInDataIn(
+                codes != null ?
+                        codes.stream().filter(Objects::nonNull).map(code -> {
+                            if (code.contains("/")) {
+                                return Pattern.compile( "^"+code+"$");
+                            }
+                            return Pattern.compile("^[0-9]/"+code+"/$");
+                         })
+                        .toList() : new ArrayList<>()).stream()
+                .map(elem -> {
+                    Taxonomy taxonomy = modelMapper.map(elem, Taxonomy.class);
+                    taxonomy.setSpecificBuiltInData(taxonomy.getSpecificBuiltInData().contains("/") ?
+                        taxonomy.getSpecificBuiltInData().split("/")[1] : taxonomy.getSpecificBuiltInData()
+                    );
+                    return taxonomy;
+                }).collect(Collectors.toList());
     }
 
     /**
